Fix heatmap label clipping.

--- a/src/options/options.css
+++ b/src/options/options.css
@@ -206,6 +206,7 @@ fieldset {
   margin-top: 5px;
 }
 #heatmap {
+  font-size: 14px;
   margin-left: -10px;
 }
 #heatmap .day {
